--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +8,38 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.app-container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  width: 75%;
+  margin: 0 auto;
+}
+
+.form-control {
+  width: 400px;
+  height: 60px;
+}
+
+.year-picker {
+  width: 400px !important;
+  height: 60px;
+  margin: 0.5rem auto;
+}
+
+.picker-panel {
+  width: 400px !important;
+  z-index: 9999;
+}
+
+.input-wrapper {
+  width: 395px;
+}
+
+.form-button {
+  width: 400px;
+  height: 60px;
 }
