--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,17 @@ code {
   width: 400px;
   height: 60px;
 }
+
+.backButton {
+  position: absolute;
+  top: 10%;
+  left: 10%;
+}
+
+.previous {
+  background-color: #f1f1f1;
+  color: black;
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+}
